# math

./: CMakeLists.txt
cmake/modules/share/modules/cmake/: CMDeploy.cmake
doc/: math.qbk
include/boost/math/bindings/: rr.hpp
include/boost/math/constants/: constants.hpp
include/boost/math/distributions/: arcsine.hpp  cauchy.hpp  exponential.hpp  extreme_value.hpp  gamma.hpp  geometric.hpp  laplace.hpp  logistic.hpp  lognormal.hpp  normal.hpp  pareto.hpp  poisson.hpp  rayleigh.hpp  skew_normal.hpp  triangular.hpp  uniform.hpp  weibull.hpp
include/boost/math/distributions/detail/: derived_accessors.hpp
include/boost/math/policies/: policy.hpp
include/boost/math/special_functions/: acosh.hpp  beta.hpp  binomial.hpp  cbrt.hpp  cos_pi.hpp  ellint_1.hpp  ellint_2.hpp  ellint_3.hpp  ellint_d.hpp  ellint_rc.hpp  ellint_rd.hpp  ellint_rj.hpp  erf.hpp  expint.hpp  expm1.hpp  factorials.hpp  fpclassify.hpp  gamma.hpp  lanczos.hpp  log1p.hpp  math_fwd.hpp  next.hpp  owens_t.hpp  pow.hpp  powm1.hpp  round.hpp  sin_pi.hpp  trunc.hpp
include/boost/math/special_functions/detail/: bernoulli_details.hpp  bessel_j0.hpp  bessel_j1.hpp  bessel_jy.hpp  erf_inv.hpp  fp_traits.hpp  igamma_large.hpp  lgamma_small.hpp  polygamma.hpp  t_distribution_inv.hpp  unchecked_factorial.hpp
include/boost/math/tools/: big_constant.hpp  config.hpp  fraction.hpp  polynomial.hpp  precision.hpp  rational.hpp  series.hpp  tuple.hpp
include/boost/math/tools/detail/: polynomial_horner1_10.hpp  polynomial_horner1_11.hpp  polynomial_horner1_12.hpp  polynomial_horner1_13.hpp  polynomial_horner1_14.hpp  polynomial_horner1_15.hpp  polynomial_horner1_16.hpp  polynomial_horner1_17.hpp  polynomial_horner1_18.hpp  polynomial_horner1_19.hpp  polynomial_horner1_2.hpp  polynomial_horner1_20.hpp  polynomial_horner1_3.hpp  polynomial_horner1_4.hpp  polynomial_horner1_5.hpp  polynomial_horner1_6.hpp  polynomial_horner1_7.hpp  polynomial_horner1_8.hpp  polynomial_horner1_9.hpp  polynomial_horner2_10.hpp  polynomial_horner2_11.hpp  polynomial_horner2_12.hpp  polynomial_horner2_13.hpp  polynomial_horner2_14.hpp  polynomial_horner2_15.hpp  polynomial_horner2_16.hpp  polynomial_horner2_17.hpp  polynomial_horner2_18.hpp  polynomial_horner2_19.hpp  polynomial_horner2_2.hpp  polynomial_horner2_20.hpp  polynomial_horner2_3.hpp  polynomial_horner2_4.hpp  polynomial_horner2_5.hpp  polynomial_horner2_6.hpp  polynomial_horner2_7.hpp  polynomial_horner2_8.hpp  polynomial_horner2_9.hpp  polynomial_horner3_10.hpp  polynomial_horner3_11.hpp  (+71 more)
test/: CMakeLists.txt
tools/: CMakeLists.txt  generate_rational_code.cpp
